clipping bug on firefox fixed

--- a/public/styles/animate-rank.css
+++ b/public/styles/animate-rank.css
@@ -1,5 +1,6 @@
 .animate-rank-details-fo {
     overflow: visible;
+    pointer-events: none;
 }
 
 .animate-rank-details {
